--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
 
+<html>
+    <!DOCTYPE html>
+</html>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Building a Wireframe</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+
+    <header>
+        header 
+    </header>
+
+    <nav>
+        nav
+    </nav>
+    
+    <section>
+        <article>article
+          <h1>h1, h2, h3</h1>  
+          <p>p</p>
+        </article>
+</section>
+
+ <section>
+    <aside>aside</aside>
+    <footer>footer</footer>
+ </section>
+
+</body>
